Fixes 12 hour clock display on mobile, changed phrasing for a couple settings

--- a/modules/css/base.css
+++ b/modules/css/base.css
@@ -1034,7 +1034,7 @@ input.heart:hover {
 
 #mobileStats .time {
 	font-size: 1.2em;
-	height: 75px;
+	height: 85px;
 	padding: 0 0.3em;
 	writing-mode: vertical-rl;
 	transform: rotate(180deg);
@@ -1045,6 +1045,16 @@ input.heart:hover {
 
 #mobileStats .time .ampm {
 	font-size: 0.5em;
+}
+
+.mobile-rec {
+	font-size: 0.9em;
+}
+
+@media screen and (min-width: 1024px) {
+	.mobile-rec {
+		display: none;
+	}
 }
 
 #savesListContainer {
